--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                     </a>
                 </div>
                 <div style="background: #fff; padding: 20px; border-radius: 20px; display: flex; flex-direction: column; align-items: center;">
-                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://storied-genie-d2071c.netlify.app/" alt="QR">
+                    <img src="https://api.qrserver.com/v1/create-qr-code/?size=150x150&data=https://pronextdesignwork.github.io/MachnovaProject2025/" alt="QR">
                     <p style="color: #000; font-size: 0.8rem; margin-top: 10px; font-weight: 700;">QR-код сайта</p>
                 </div>
             </div>
